--- a/index.html
+++ b/index.html
@@ -18,5 +18,21 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="hero">
+        <div class="hero-info">
+          <h1>NO HAY NADA IMPOSIBLE</h1>
+          <p>
+            Somos una empresa dedicada al diseño y desarrollo de software, para
+            nosotros no hay nada imposible
+          </p>
+          <button class="btn-hero" id="btn-hero-primary">contactanos</button>
+          <button class="btn-hero" id="btn-hero-secondary">ver mas</button>
+        </div>
+        <div class="hero-img">
+          <img src="./imgs/undraw_team_up_re_84ok.svg" alt="img-hero" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
