hero & nuevos setttings

--- a/index.html
+++ b/index.html
@@ -19,19 +19,29 @@
       </nav>
     </header>
     <main>
-      <section class="hero">
+      <section class="seccion hero">
         <div class="hero-info">
-          <h1>NO HAY NADA IMPOSIBLE</h1>
+          <h1>"NO HAY NADA IMPOSIBLE"</h1>
           <p>
-            Somos una empresa dedicada al diseño y desarrollo de software, para
-            nosotros no hay nada imposible
+            Somos personas sin miedo a los desafios, para nosotros no existe la
+            palabra imposible.
           </p>
-          <button class="btn-hero" id="btn-hero-primary">contactanos</button>
-          <button class="btn-hero" id="btn-hero-secondary">ver mas</button>
+          <div class="btn-hero">
+            <button class="btn btn-primary">CONTACTANOS</button>
+            <button class="btn btn-secondary">VER MAS</button>
+          </div>
         </div>
         <div class="hero-img">
-          <img src="./imgs/undraw_team_up_re_84ok.svg" alt="img-hero" />
+          <img src="./imgs/undraw_online_test_re_kyfx.svg" alt="img-hero" />
         </div>
+      </section>
+      <section class="seccion descripcion">
+        <p>
+          Somos una empresa dedicada al desarrollo de sitios y aplicaciones web,
+          llevamos mas de 10 años trabajando en IT y para nosotros
+          <b>"no hay nada imposible"</b>. Destacamos por nuestro trabajo en
+          equipo y resolucion de problemas.
+        </p>
       </section>
     </main>
   </body>
