correccion de 2do section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <section class="seccion descripcion">
         <p>
           Somos una empresa dedicada al desarrollo de sitios y aplicaciones web,
-          llevamos mas de 10 años trabajando en IT y para nosotros
-          <b>"no hay nada imposible"</b>. Destacamos por nuestro trabajo en
-          equipo y resolucion de problemas.
+          llevamos mas de 10 años trabajando en IT y para nosotros <br />
+          <b>"NO HAY NADA IMPOSIBLE"</b>. <br />
+          Destacamos por nuestro trabajo en equipo y resolucion de problemas.
         </p>
       </section>
     </main>
